test: add some tests