@@ -34,7 +34,11 @@ dependencies {
 
     testImplementation(platform(libs.junitBom))
     testImplementation(libs.junitJupiter)
+    testImplementation(libs.assertj)
     testImplementation(libs.elementary)
+    testImplementation(libs.javaparser)
+    testImplementation(libs.guava)
+    testImplementation(libs.jakartaValidationApi)
 
     testRuntimeOnly(libs.junitPlatformLauncher)
 
@@ -44,24 +48,7 @@ dependencies {
     errorprone(libs.nullaway)
 }
 
-val javacExports =
-    listOf(
-        //        "--add-exports=java.base/jdk.internal.javac=ALL-UNNAMED",
-        //        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-        //        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"
-        //        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-        //        "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-        //        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-        //        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-        //        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-        //        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-        //        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-    )
-
 tasks.withType<JavaCompile> {
-    options.compilerArgs.addAll(javacExports)
-
     options.errorprone {
         disableWarningsInGeneratedCode = true
         errorproneArgs = listOf("-XepAllSuggestionsAsWarnings")
